k8s/dev-DO/pgcleanup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cleanup-pod
spec:
  containers:
    - name: cleanup-container
      image: busybox
      command: ["/bin/sh", "-c", "rm -rf /var/lib/postgresql/data/*"]
      volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: postgres-pvc
  restartPolicy: Never
